# Scored

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train.md
label-studio-ml-backend/: Dockerfile  README.md  model.py
label-studio-ml-backend/control_models/: keypoint_labels.py
label-studio-ml-backend/data/server/models/: cache.db
label-studio-setup/: README.md  connect-ml-backend.py  create-project.py  project.py  view.yaml
notebooks/: predict.ipynb
scripts/: app.py  dataset.py  eval.py
src/: format_data.py  perspective.py  plot.py  predict.ipynb  predictor.py  util.py
src/board/: dartboard.py
src/preparation/: format_data.py
src/preparation/dataset/: annotation.py  format.py  split.py  yolo.py
src/preperation/: format_data.py
src/scored/: plot.py  predictor.py
src/scored/data_preparation/: annotation.py  augmentation.py  format.py  yolo.py
src/scored/draw/: plot.py
src/scored/game/: dartGame.py
src/scored/prediction/: predictor.py
src/scored/preparation/dataset/: annotation.py  format.py  split.py  yolo.py
src/scored/recording/: prediction_thread.py  ui.py  video_thread.py
src/scored/recording/views/: player_view.py  throw_input_view.py
src/scored/test/: compare.py
src/test/: compare.py  eval.py
src/train/: colab_train.ipynb
